--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,15 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.1'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.2.1' apply false
+    id 'io.spring.dependency-management' version '1.1.4' apply false
 }
 
-group = 'com.kodilla'
-version = '1.0-SNAPSHOT'
-
-java {
-    sourceCompatibility = '21'
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 }
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-
-    // Spring Boot - core
-    implementation 'org.springframework.boot:spring-boot-starter'
-
-    // REST API (Spring MVC)
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-
-    // Spring Data JPA
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // Validation (@NotNull, @Size itd.)
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-
-    runtimeOnly 'com.h2database:h2'
-
-    // PostgreSQL
-    runtimeOnly 'org.postgresql:postgresql'
-
-    // Lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    // Testy
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-}
-
-test {
-    useJUnitPlatform()
+subprojects {
+    apply plugin: 'java'
 }
