--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,6 @@ include 'kodilla-exception'
 include 'kodilla-spring'
 include'kodilla-spring-web'
 include 'kodilla-good-patterns'
+
+include 'kodilla-jdbc'
+include 'kodilla-sudoku'
