--- a/kodilla-hibernate/src/main/resources/application.properties
+++ b/kodilla-hibernate/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=kodilla_Pass123
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
