--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'kodilla-exception'
 include 'kodilla-spring'
 include'kodilla-spring-web'
 include 'kodilla-good-patterns'
+include 'kodilla-hibernate'
 
 include 'kodilla-jdbc'
 include 'kodilla-sudoku'
